--- a/web.config
+++ b/web.config
@@ -21,7 +21,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
-    <customErrors mode="Off">
+    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
