--- a/web.config
+++ b/web.config
@@ -1,35 +1,29 @@
-<?xml version="1.0"?>
-<!-- Generated web.config for Microsoft Azure. Remove this comment to prevent
-     modifications being overwritten when publishing the project.
--->
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-<!--
-  <system.diagnostics>
-    <trace>
-      <listeners>
-        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
-          <filter type="" />
-        </add>
-      </listeners>
-    </trace>
-  </system.diagnostics>
-  -->
   <appSettings>
     <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
-    <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\activate_this.py" />
+    <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\vsts\matzheng\djangoApp\env\Scripts\activate_this.py" />
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_virtualenv_handler()" />
-    <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
+     <!--
+    <add key="WSGI_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
+    -->
+    <add key="PYTHONPATH" value="D:\vsts\matzheng\djangoApp" />
     <add key="DJANGO_SETTINGS_MODULE" value="DjangoApp.settings" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
-    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
+    <!--
+        <handlers>
+            <add name="DjangoFastCGI" path="*" verb="*" modules="FastCgiModule" scriptProcessor="C:\Python27\python.exe|D:\vsts\matzheng\djangoApp\wfastcgi.py" resourceType="Unspecified" />
+        </handlers>
+    -->
     <handlers>
-      <add name="Python FastCGI" path="handler.fcgi" verb="*" modules="FastCgiModule" scriptProcessor="D:\Python27\python.exe|D:\Python27\Scripts\wfastcgi.py" resourceType="Unspecified" requireAccess="Script" />
+      <add name="Python FastCGI" path="*" verb="*" modules="FastCgiModule" scriptProcessor="C:\Python27\python.exe|D:\vsts\matzheng\djangoApp\wfastcgi.py" resourceType="Unspecified" requireAccess="Script" />
     </handlers>
+    <!--
     <rewrite>
       <rules>
         <rule name="Static Files" stopProcessing="true">
@@ -46,5 +40,6 @@
         </rule>
       </rules>
     </rewrite>
+    -->
   </system.webServer>
 </configuration>
