--- a/web.config
+++ b/web.config
@@ -27,7 +27,7 @@
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
-      <add name="Python FastCGI" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\Python27\python.exe|D:\home\site\wwwroot\wfastcgi.py" resourceType="Unspecified" requireAccess="Script" />
+      <add name="Python FastCGI" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\Python27\python.exe|D:\home\site\wwwroot\wfastcgi.py" resourceType="Unspecified" />
     </handlers>
   </system.webServer>
 </configuration>
